fix message container alignment issue

--- a/flash-message-toast.scss
+++ b/flash-message-toast.scss
@@ -29,6 +29,7 @@
         bottom: 10%;
     }
     .flashMessageWrapper {
+        box-sizing: border-box;
         min-width: 10rem;
         width: 100%;
         max-height: 80%;
